--- a/packages/react-app/src/index.css
+++ b/packages/react-app/src/index.css
@@ -1,10 +1,8 @@
-.App {
-  text-align: center;
-}
-
-
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Halvatica", cursive;
 }
 
 code {
